<resources>
    <string name="app_name">Sirius</string>
    <string name="login_bnav_label">SRS</string>
    <string name="academiccalendar_bnav_label">Calendar</string>
    <string name="cafeteria_bnav_label">Cafeteria</string>
    <string name="verification_selector_label">Verification</string>
    <string name="verification_selector_manual_label">Manual</string>
    <string name="verification_selector_automatic_label">Automatic</string>
    <string name="login_username_hint">Bilkent ID</string>
    <string name="login_password_hint">Password</string>
    <string name="login_continue_label">Continue</string>
    <string name="login_email_password_hint">Email Password</string>
    <string name="login_bilkent_email_hint">Bilkent Email</string>
    <string name="login_bilkent_email_suffix">\@ug.bilkent.edu.tr</string>
    <string name="login_automatic_verification_text_attempting">Attempting to obtain verification code…</string>
    <string name="login_manual_verification_reference_text">Reference Code: <b>%1$s</b></string>
    <string name="login_manual_verification_hint">Verification Code</string>
    <string name="login_manual_verification_submit_text">Submit</string>
    <string name="login_return_button_text">Return to SRS</string>
    <string name="login_return_text">Looks like you\'ve already logged in.</string>
    <string name="srs_information_card_label">Information Card</string>
    <string name="srs_navmenu_sirius">SIRIUS</string>
    <string name="srs_navmenu_stars">STARS</string>
    <string name="srs_navmenu_return_main_menu_text">Return to main menu</string>
    <string name="loading_screen_default_text">Loading…</string>
    <string name="information_card_headline_text">Information Card</string>
    <string name="information_card_student_headline_text">Student</string>
    <string name="information_card_advisor_headline_text">Advisor</string>
    <string name="information_card_academic_headline_text">Academic</string>
    <string name="information_card_ranking_headline_text">Ranking</string>
    <string name="information_card_scholarship_headline_text">Scholarship</string>
    <string name="information_card_contact_headline_text">Contact</string>
    <string name="srs_attendance_label">Attendance</string>
    <string name="srs_curriculum_label">Curriculum</string>
    <string name="srs_exams_label">Exams</string>
    <string name="srs_gpa_calculation_label">GPA Calculation</string>
    <string name="srs_grades_label">Grades</string>
    <string name="srs_letter_grade_statistics_label">Letter Grade Statistics</string>
    <string name="srs_semester_courses_label">Semester Courses</string>
    <string name="srs_transcript_label">Transcript</string>
    <string name="srs_weekly_schedule_label">Weekly Schedule</string>
    <string name="letter_grade_statistics_download_graph_text">Download Graph</string>
    <string name="letter_grade_statistics_graph_description_text">Letter grade statistics graph</string>
    <string name="exam_classrooms_label_text">Classrooms</string>
    <string name="semester_course_instructor_text">by %1$s</string>
    <string name="semester_courses_year_hint">Year</string>
    <string name="semester_courses_season_hint">Season</string>
    <string name="attendance_ratio_label">Attendance Ratio</string>
</resources>
